2005-10-31  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-history-window.c: (cmd_bookmark_link):

	Use the history window as parent for the new-bookmark dialogue.
	Fixes bug #320329.

2005-10-31  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-history-window.c: (build_search_box):

	Fix capitalisation, bug #320330.

2005-10-31  Christian Persch  <chpe@cvs.gnome.org>

	* embed/ephy-history.c: (ephy_history_class_init),
	(ephy_history_add_page), (impl_add_page):
	* embed/ephy-history.h:
	* embed/mozilla/GlobalHistory.cpp:
	* lib/ephy-marshal.list:
	* src/epiphany.defs:

	Store the redirect and toplevel attributes when
	adding pages to the history (doesn't do anything with
	the info yet, though). Based on a galeon patch by tko.

2005-10-31  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/GtkNSSDialogs.cpp:
	* embed/print-dialog.c:
	* lib/Makefile.am:
	* lib/ephy-dialog.c: (impl_construct):
	R lib/ephy-glade.c:
	R lib/ephy-glade.h:

	Remove ephy-glade since we don't need autoconnect anymore.

2005-10-30  Christian Persch  <chpe@cvs.gnome.org>

	* data/glade/epiphany.glade:
	* data/glade/prefs-dialog.glade:
	* data/glade/print.glade:
	* embed/downloader-view.c: (update_buttons),
	(downloader_view_build_ui), (download_dialog_pause),
	(download_dialog_stop), (download_dialog_response_cb),
	(download_dialog_delete_event_cb):
	* embed/print-dialog.c: (ephy_print_setup_dialog_response_cb),
	(ephy_print_setup_dialog_new):
	* src/ephy-encoding-dialog.c: (ephy_encoding_dialog_init):
	* src/pdm-dialog.c: (show_cookies_properties),
	(cookies_properties_clicked_cb), (pdm_dialog_cookies_construct),
	(passwords_show_toggled_cb), (pdm_dialog_passwords_construct),
	(pdm_dialog_response_cb), (pdm_dialog_init), (pdm_dialog_finalize):
	* src/prefs-dialog.c: (create_language_section),
	(prefs_dialog_response_cb), (prefs_clear_cache_button_clicked_cb),
	(set_homepage_entry), (prefs_homepage_current_button_clicked_cb),