@@ -1,5 +1,14 @@
 2005-10-31  Christian Persch  <chpe@cvs.gnome.org>
 
+	* lib/ephy-dbus.c:
+	* src/bookmarks/ephy-bookmarks-editor.c:
+	(ephy_bookmarks_editor_construct):
+	* src/bookmarks/ephy-bookmarks.c: (ephy_bookmarks_init_defaults):
+
+	Constification.
+
+2005-10-31  Christian Persch  <chpe@cvs.gnome.org>
+
 	* src/ephy-history-window.c: (cmd_bookmark_link):
 
 	Use the history window as parent for the new-bookmark dialogue.
